--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           text-align: left;
           transition: transform 0.2s ease, background-color 0.2s ease;
           margin-bottom: 1rem;
+          color: #FFD700;
       }
       .btn-game:hover {
           background-color: var(--secondary);
@@ -675,4 +676,5 @@
       setMultiplier(1);
   </script>
 </body>
+
 </html>
