--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           text-align: left;
           transition: transform 0.2s ease, background-color 0.2s ease;
           margin-bottom: 1rem;
-          color: #FFD700;
+          color: #FFF;
       }
       .btn-game:hover {
           background-color: var(--secondary);
@@ -678,3 +678,4 @@
 </body>
 
 </html>
+
